<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_bg_color"
    tools:context="com.taoke.taokestudent.activity.personalcenter.UpdatePasswordActivity">

    <!-- 标题栏 -->
    <include layout="@layout/title_activity"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/account_info_interval"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!-- 信息 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/update_password_info_height"
            android:background="@drawable/bg_registe_bottom_part"
            android:orientation="vertical"
            android:paddingEnd="@dimen/account_info_interval"
            android:paddingStart="@dimen/account_info_interval">

            <!-- 原密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/account_icon_size"
                    android:layout_height="@dimen/account_icon_size"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_registe_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/account_info_interval"
                    android:orientation="vertical">

                    <com.taoke.taokestudent.customerview.ClearEditText
                        android:id="@+id/cet_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/old_password"
                        android:inputType="textPassword" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_seperate" />
                </LinearLayout>
            </LinearLayout>

            <!-- 新密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/account_icon_size"
                    android:layout_height="@dimen/account_icon_size"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_registe_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/account_info_interval"
                    android:orientation="vertical">

                    <com.taoke.taokestudent.customerview.ClearEditText
                        android:id="@+id/cet_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/new_password"
                        android:inputType="textPassword" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_seperate" />
                </LinearLayout>
            </LinearLayout>

            <!-- 再次输入密码 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/account_icon_size"
                    android:layout_height="@dimen/account_icon_size"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_registe_password_confirm" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/account_info_interval"
                    android:orientation="vertical">

                    <com.taoke.taokestudent.customerview.ClearEditText
                        android:id="@+id/cet_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/input_confirm_password"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- 确认按钮 -->
        <Button
            android:id="@+id/btn_ensure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_margin_top"
            android:background="@drawable/bg_btn_unable"
            android:enabled="false"
            android:text="@string/ensure"
            android:textColor="@color/title_text_color"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>


</LinearLayout>
